octopus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octopus-ingress
  namespace: octopus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
      - octopus.lucasnet.int
      - octopus.lucasnet.org
      secretName: lucasnet-tls
  rules:
    - host: octopus.lucasnet.int
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes octopus exists and routes to healthy endpoints
            service:
              name: octopus
              port:
                number: 8080
